--- a/Shamazon/Views/Home/Index.cshtml
+++ b/Shamazon/Views/Home/Index.cshtml
@@ -3,29 +3,50 @@
 }
 
 <div class="jumbotron">
-    <h1>Get the latest products!</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>ShAmazon</h1>
+    <p class="lead">Welcome</p>
+    <p><a onclick="location.href='@Url.Action("Register", "Account")'" class="btn btn-primary btn-lg">Sign Up Today &raquo;</a></p>
 </div>
 
+<h1>Featured Products</h1>
+
+
 <div class="row">
+    
+<!--Featured Product 1-->
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        
+        <img class="card-img-top" src="~/Content/image.svg" alt="Card image cap">
+
+        <h2>product.Name</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            [product description]
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" onclick="location.href='@Url.Action("Checkout", "Home")'">View Product &raquo;</a></p>
     </div>
+
+    <!--Featured Product 2-->
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+
+        <img class="card-img-top" src="~/Content/image.svg" alt="Card image cap">
+
+        <h2>product.Name</h2>
+        <p>
+            [product description]
+        </p>
+        <p><a class="btn btn-default" onclick="location.href='@Url.Action("Checkout", "Home")'">View Product &raquo;</a></p>
     </div>
+
+    <!--Featured Product 3-->
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+
+        <img class="card-img-top" src="~/Content/image.svg" alt="Card image cap">
+
+        <h2>product.Name</h2>
+        <p>
+            [product description]
+        </p>
+        <p><a class="btn btn-default" onclick="location.href='@Url.Action("Checkout", "Home")'">View Product &raquo;</a></p>
     </div>
 </div>
+
