--- a/Shamazon/Views/Shared/_LoginPartial.cshtml
+++ b/Shamazon/Views/Shared/_LoginPartial.cshtml
@@ -18,5 +18,8 @@ else
     <ul class="nav navbar-nav navbar-right">
         <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
         <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+
+        <li>@Html.ActionLink("Cart", "Cart", "Home", routeValues: null, htmlAttributes: new { id = "cartLink" })</li>
+
     </ul>
 }
