Featured products updated, about and contact added to navbar

--- a/Shamazon/Views/Home/About.cshtml
+++ b/Shamazon/Views/Home/About.cshtml
@@ -4,4 +4,9 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>
+    The application “ShAmazon” will provide a centralized online shopping service for buyers and sellers.
+    The intended users of ShAmazon are general online shoppers who are looking to track their
+    purchase history through a user-friendly dashboard, and sellers who are looking for a third party vendor
+    to list items and track sale metrics through a user-friendly dashboard with the ability to easily export their data.
+</p>
