--- a/Shamazon/Views/Home/Index.cshtml
+++ b/Shamazon/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>ShAmazon</h1>
-    <p class="lead">Welcome</p>
+    <p class="lead">Start shopping or become a seller today!</p>
     <p><a onclick="location.href='@Url.Action("Register", "Account")'" class="btn btn-primary btn-lg">Sign Up Today &raquo;</a></p>
 </div>
 
@@ -15,38 +15,41 @@
     
 <!--Featured Product 1-->
     <div class="col-md-4">
-        
-        <img class="card-img-top" src="~/Content/image.svg" alt="Card image cap">
 
-        <h2>product.Name</h2>
+        <img class="card-img-top" src="~/Content/headphones.jpg" style=" margin:0 auto; width: 100%" alt="Card image cap">
+
+        <h2>Beats Studio3 Wireless Over-Ear Headphones [Defiant Black-Red]</h2>
         <p>
-            [product description]
+            Connectivity Technology: Wireless Connect via Class 1 Bluetooth with your device for wireless workout freedom
+            Up to 12 hours of battery life to power through multiple workouts
         </p>
-        <p><a class="btn btn-default" onclick="location.href='@Url.Action("Checkout", "Home")'">View Product &raquo;</a></p>
+        <p><a class="btn btn-default" onclick="location.href='@Url.Action("Index", "Shop")'">View Product &raquo;</a></p>
     </div>
 
     <!--Featured Product 2-->
     <div class="col-md-4">
+        <img class="card-img-top" src="~/Content/pokemon.jpg" style=" margin:0 auto; width: 100%" alt="Card image cap">
 
-        <img class="card-img-top" src="~/Content/image.svg" alt="Card image cap">
-
-        <h2>product.Name</h2>
+        <h2>Pokémon: Let’s Go, Pikachu! + Poké Ball Plus Pack </h2>
         <p>
-            [product description]
+            Take your favorite Pokémon out for a stroll in Poké Ball Plus. Share your adventure with family or friends 
+            in 2-player action using a second Joy-Con or Poké Ball Plus (sold separately). <br />
+            Every accessory contains the Mythical Pokémon Mew!** <br />
         </p>
-        <p><a class="btn btn-default" onclick="location.href='@Url.Action("Checkout", "Home")'">View Product &raquo;</a></p>
+        <p><a class="btn btn-default" onclick="location.href='@Url.Action("Index", "Shop")'">View Product &raquo;</a></p>
     </div>
 
     <!--Featured Product 3-->
     <div class="col-md-4">
+        <img class="card-img-top" src="~/Content/christmas.jpg" style=" margin:0 auto; width: 100%" alt="Card image cap">
 
-        <img class="card-img-top" src="~/Content/image.svg" alt="Card image cap">
-
-        <h2>product.Name</h2>
+        <h2>22in Pre-Lit Battery Operated Tabletop Mini Artificial Christmas Tree</h2>
         <p>
-            [product description]
+            Branches are pre-decorated with (15) warm LED Christmas string lights to brighten your space<br />
+            Includes (14) golden Christmas ornaments and various holly berries spread throughout the branches<br />
+            Wireless tree only requires (3) AA batteries for use (not included)
         </p>
-        <p><a class="btn btn-default" onclick="location.href='@Url.Action("Checkout", "Home")'">View Product &raquo;</a></p>
+        <p><a class="btn btn-default" onclick="location.href='@Url.Action("Index","Shop")'">View Product &raquo;</a></p>
     </div>
 </div>
 
