--- a/Shamazon/Views/Home/Contact.cshtml
+++ b/Shamazon/Views/Home/Contact.cshtml
@@ -5,10 +5,11 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+
+    333 S Twin Oaks Valley Rd<br />
+    San Marcos, CA 92096<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    (760) 750-4000
 </address>
 
 <address>
