--- a/Shamazon/Views/Shared/_NavBar.cshtml
+++ b/Shamazon/Views/Shared/_NavBar.cshtml
@@ -11,9 +11,14 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Shop", "Index", "Shop")</li>
+                <li>@Html.ActionLink("About", "About", "Home")</li>
+                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
+
+
     </div>
     <div class="container margin-bottom-15">
         <div class="row">
