--- a/Shamazon/Views/Home/Index.cshtml
+++ b/Shamazon/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
             Connectivity Technology: Wireless Connect via Class 1 Bluetooth with your device for wireless workout freedom
             Up to 12 hours of battery life to power through multiple workouts
         </p>
-        <p><a class="btn btn-default" onclick="location.href='@Url.Action("Index", "Shop")'">View Product &raquo;</a></p>
+        <p><a class="btn btn-default" onclick="location.href='@Url.Action("Index", "Shop/Product/2")'">View Product &raquo;</a></p>
     </div>
 
     <!--Featured Product 2-->
@@ -36,7 +36,7 @@
             in 2-player action using a second Joy-Con or Poké Ball Plus (sold separately). <br />
             Every accessory contains the Mythical Pokémon Mew!** <br />
         </p>
-        <p><a class="btn btn-default" onclick="location.href='@Url.Action("Index", "Shop")'">View Product &raquo;</a></p>
+        <p><a class="btn btn-default" onclick="location.href='@Url.Action("Index", "Shop/Product/3")'">View Product &raquo;</a></p>
     </div>
 
     <!--Featured Product 3-->
@@ -49,7 +49,7 @@
             Includes (14) golden Christmas ornaments and various holly berries spread throughout the branches<br />
             Wireless tree only requires (3) AA batteries for use (not included)
         </p>
-        <p><a class="btn btn-default" onclick="location.href='@Url.Action("Index","Shop")'">View Product &raquo;</a></p>
+        <p><a class="btn btn-default" onclick="location.href='@Url.Action("Index","Shop/Product/4")'">View Product &raquo;</a></p>
     </div>
 </div>
 
