--- a/Shamazon/Views/Shop/Product.cshtml
+++ b/Shamazon/Views/Shop/Product.cshtml
@@ -14,4 +14,5 @@
     <li>Original Price: @Model.OriginalPrice</li>
     <li>Rating: @Model.Rating</li>
 </ul>
+<a class="btn btn-default" href="/Shop/AddToCart/@Model.Id">Add to cart</a>
 
